# agent_rail

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/gateway/: package.json
apps/gateway/src/: index.ts
apps/gateway/src/lib/: audit-store.ts  config.ts  vault-plan.ts
apps/gateway/src/routes/: audit.ts  execute.ts  health.ts  policies.ts  vault-plan.ts
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
docs/: product-brief.md
programs/agent-vault/: Cargo.toml
programs/agent-vault/src/: lib.rs
tests/: agent-vault.ts
